<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.presentation.edithabit.HabitEditFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true">

        <Button
            android:id="@+id/addButton"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/addButton"
            android:textSize="@dimen/smallText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/colorOfHabit"
            app:layout_constraintTop_toBottomOf="@+id/colorOfHabit"
            app:layout_constraintVertical_bias="1"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/purple_500"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@+id/addButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameHabitLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hintNameHabit"
            app:boxBackgroundColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NameHabitText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="text"
                android:lines="1"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hintDescription"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NameHabitLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DescText"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/typeHabit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/typeText"
            android:textSize="@dimen/middleText"
            app:layout_constraintHorizontal_bias="0.001"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Desc"

            />

        <TextView
            android:id="@+id/Priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/priorityText"
            android:textSize="@dimen/middleText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/prioritySpinner"
            app:layout_constraintTop_toBottomOf="@id/Desc" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.001"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/Priority"
            app:layout_constraintTop_toBottomOf="@id/typeHabit">

            <RadioButton
                android:id="@+id/radioButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/goodHabit" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purple_500"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/badHabit" />
        </RadioGroup>


        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/border"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintLeft_toRightOf="@id/radioGroup"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/radioGroup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hintNumber"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:layout_constraintLeft_toLeftOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/radioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FrequencyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hintFreq"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="@id/NumberLayout"
            app:layout_constraintTop_toBottomOf="@id/NumberLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/chooseColorButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/chooseColorButton"
            android:textSize="@dimen/smallText"
            app:layout_constraintEnd_toEndOf="@+id/colorOfHabit"
            app:layout_constraintStart_toStartOf="@+id/colorOfHabit"
            app:layout_constraintTop_toBottomOf="@+id/FrequencyLayout" />

        <View
            android:id="@+id/colorOfHabit"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/FrequencyLayout"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/FrequencyLayout"
            app:layout_constraintTop_toBottomOf="@+id/chooseColorButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>